--- a/style.css
+++ b/style.css
@@ -3,16 +3,17 @@ body {
     margin: 0;
     align-content: center;
     text-align: center;
-    color: burlywood;
+    color: white;
     text-decoration: none;
 }
 
-head h1{
+.head h1{
     text-decoration: none;
 }
+
 
 a {
-    color: darkred;
+    color: white;
 }
 
 .navbar {
@@ -46,14 +47,17 @@ img {
 #about {
     padding-top: 100px;
     padding-bottom: 100px;
+    
 }
 
 .abt {
     margin-bottom: 50px;
+    text-align: end;
 }
 
 #cardd {
     vertical-align: middle;
+    color: darkred;
 }
 
 input[type=text], [type=email], textarea {
@@ -89,7 +93,6 @@ img {
 .card-profile .card-avatar img,  .card-avatar img {
     width: 100%;
     height: auto;
-    
 }
 
 .card .card-header:not([class*=header-]) {
@@ -115,6 +118,7 @@ img {
 
 #contact {
     margin-top: 20px;
+    color: darkred;
 }
 
 
@@ -129,7 +133,7 @@ img {
 
 footer {
     background-color: black;
-    color: darkolivegreen;
+    color: white;
     text-align: center;
 }
 
