--- a/style.css
+++ b/style.css
@@ -1,47 +1,12 @@
 body {
-    margin: 0;
+    margin: auto;
+    width: 100%;
     align-content: center;
     text-align: center;
-    --background-color: #ffffff;
-    --text-color: #000000;
-    text-decoration: none;
-}
-
-.head a{
-    text-decoration: none;
-    list-style: none;
-}
-.head h1:hover{
-    text-decoration: none;
-    list-style: none;
-    color: #333;
-    transition: all 0.2s ease-out; 
 }
 
 a {
     color: darkred;
-}
-
-.navbar {
-    list-style: none;
-    display: inline;
-    align-content: center;
-}
-
-.mainNav li {
-    margin: 0 auto;
-    display: inline;   
-    
-}
-
-.mainNav .navItem a {
-    width: 100%;
-    text-decoration: none;
-}
-
-.navItem a:hover {
-    color: #333;
-    transition: all 0.2s ease-out; 
 }
 
 .street {
@@ -53,53 +18,18 @@ a {
     transition: all 0.2s ease-out; 
 }
 
-
-#about {
-    padding: 100px;
-    
-}
-
-.abt {
+.about {
+    width: 80%;
+    margin: auto;
     margin-bottom: 50px;
     text-align: center;
 }
 
-#cardd {
-    vertical-align: middle;
+.card-body {
     color: darkred;
 }
 
-input[type=text], [type=email], textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical;
-  }
-  
-input[type=submit] {
-    background-color: #333;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-input[type=submit]:hover {
-    background-color: #000;
-}
-
-  
-img {
-    vertical-align: middle;
-    border-style: none;
-}
-
-.card-profile .card-avatar img,  .card-avatar img {
+.card-profile .card-avatar img {
     width: 100%;
     height: auto;
 }
@@ -108,7 +38,7 @@ img {
     box-shadow: 0 16px 38px -12px rgba(0, 0, 0, .56), 0 4px 25px 0 rgba(0, 0, 0, .12), 0 8px 10px -5px rgba(0, 0, 0, .2);
 
 }
-.card-profile .card-avatar,  .card-avatar {
+.card-profile .card-avatar {
     max-width: 130px;
     max-height: 130px;
     margin: -50px auto 0;
@@ -120,55 +50,12 @@ img {
 }
 
 .gallery {
-    /* display: -webkit-flex;
-    flex-wrap: wrap;
-     */
-    line-height: 0;
-   
-  -webkit-column-count: 3;
-  -webkit-column-gap:   0px;
-  -moz-column-count:    3;
-  -moz-column-gap:      0px;
-  column-count:         3;
-  column-gap:           0px;
-  padding-left: 10px;
-  }
-
-.images {
-    /* flex: 0 1 250px;
-    margin: 5px;
-    transition: all .2s ease-in-out; */
-    border-radius: 5%;
-    width: 100% !important;
-  height: auto !important;
-}
-.images:hover { transform: scale(1.1); }
-
-#contact {
-    margin-top: 20px;
-    color: darkred;
-    margin-bottom: 10px;
-}
-
-.container {
-    border-radius: 5px;
-    background-color: #ffffff;
-    padding: 20px;
+    width: 80%;
     margin: auto;
-    overflow: hidden;
-    box-shadow: 50px 40px 115px rgba(0, 0, 0, 0.1);
 }
 
 footer {
     background-color: black;
     color: white;
     text-align: center;
-}
-
-@media (max-width: 768px) {
-    #about {
-        padding: 0 ;
-        margin-top: 40px;
-        margin-bottom: 40px;
-    }
 }
